--- a/css/styles2.css
+++ b/css/styles2.css
@@ -2,92 +2,91 @@
     --gradientBackground: linear-gradient(to right, #a274f7, #83b8f1);
     --boxShadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
     --greyColor: rgba(0, 0, 0, 0.5);
-    --letterSpacing: 10px;
 }
 
 * {
     box-sizing: border-box;
 }
 
-html,
-body,
 h1,
 h2,
 h3,
 h4,
 h5,
-h6 {
+body,
+html {
     margin: 0;
     padding: 0;
 }
 
-html,
 body,
+html,
 main {
     height: 100%;
 }
 
 body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    padding: 0;
-    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     background-color: #d5d5d3;
 }
 
-.fa-check {
-    color: #CECECE;
-    font-size: 28px;
-}
-
-.fa-check.selected {
-    color: #a274f7;
-}
-
 .header {
-    color: #ffffff;
     box-shadow: var(--boxShadow);
-    background: linear-gradient(to right, rgba(171, 109, 205, 1) 1%, rgba(131, 166, 248, 1) 100%);
+    background-image: var(--gradientBackground);
+    color: white;
     display: flex;
-    justify-content: space-between;
     align-items: flex-end;
-    padding: 40px 10px 10px 20px;
+    justify-content: space-between;
+    padding: 40px 10px 10px 10px;
     margin-bottom: 30px;
     z-index: 2;
     position: relative;
 }
 
-.header__title {
-    font-size: 15px;
-    font-weight: 700;
-    letter-spacing: var(--letterSpacing);
-    display: grid;
+.header svg {
+    fill: white;
+}
+
+.header .header__title {
+    font-size: 16px;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+.header__title span:first-child {
+    display: block;
 }
 
 .header__title span:last-child {
     margin-left: 15px;
 }
 
-.header__icon {
-    font-size: 20px;
-    margin: 0px 20px;
+.main {
+    position: relative;
+}
+
+.main .match-list__button {
+    background-image: var(--gradientBackground);
+    color: white;
+    box-shadow: var(--boxShadow);
+    text-transform: uppercase;
+    padding: 30px 60px;
+    border: none;
+    position: absolute;
+    bottom: 40px;
+    right: 15px;
+}
+
+.header__icons span {
+    margin-left: 15px;
+}
+
+.header__icons span:first-child {
+    margin: 0;
 }
 
 .main {
-    position: relative;
-    padding: 0px 20px 20px 20px;
-}
-
-.match-list__button {
-    position: fixed;
-    background: var(--gradientBackground);
-    color: #ffffff;
-    box-shadow: var(--boxShadow);
-    border: none;
-    text-transform: uppercase;
-    padding: 30px 60px;
-    bottom: 40px;
-    right: 15px;
-    letter-spacing: var(--letterSpacing);
+    padding: 0px 20px;
 }
 
 .main .main__header {
@@ -99,32 +98,25 @@ body {
     margin-bottom: 50px;
 }
 
-.main__header .main__header-title {
+.main__header .main__list-title {
     font-size: 40px;
     text-transform: uppercase;
-    letter-spacing: var(--letterSpacing);
     margin-bottom: 20px;
 }
 
-.main__header .main__header-subtitle {
-    display: flex;
+.main__header .main__list-subtitle {
     margin-left: 30px;
     color: var(--greyColor);
     text-transform: uppercase;
-    font-weight: 600;
 }
 
-.main__header .main__header-subtitle span:last-child {
-    margin-left: 10px;
-    letter-spacing: 5px;
+.main__header svg,
+.match-item svg {
+    fill: var(--greyColor);
 }
 
-.main__header .main__header-column .fas {
-    margin-right: 25px;
-}
-
-.match-list {
-    margin: 0px 0px 20px 0px;
+.main .match-list {
+    margin: 0;
     padding: 0;
     list-style: none;
     display: grid;
@@ -139,7 +131,6 @@ body {
 
 .match-item img {
     max-width: 60px;
-    max-height: 60px;
     box-shadow: var(--boxShadow);
 }
 
@@ -147,34 +138,29 @@ body {
     font-weight: 600;
 }
 
-.match-item__name {
+.match-item__info .match-item__name {
     display: block;
     margin-bottom: 10px;
     font-size: 18px;
 }
 
-.match-item__friends {
+.match-item__info .match-item__friends {
     text-transform: uppercase;
     color: var(--greyColor);
 }
 
-.match-item__friends span:last-child {
-    letter-spacing: 5px;
-    margin-left: 10px;
-}
-
-.match-item__icon {
+.match-item .match-item__icon {
     align-self: center;
 }
 
-.fakebg {
+.fakeBg {
     position: fixed;
-    width: 80vw;
     height: 100vh;
-    background-color: #ffffff;
-    top: 0;
+    background-color: white;
+    top: 0px;
     right: 0;
     left: 0;
-    z-index: 0;
+    width: 80vw;
     margin: auto;
+    z-index: 0;
 }
