--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,7 @@ body {
     padding: 0;
     margin: 0;
     background-color: #d5d5d3;
+    position: relative;
 }
 
 .fa-check {
@@ -44,6 +45,9 @@ body {
 }
 
 .header {
+    position: fixed;
+    width: 100vw;
+    top: 10;
     color: #ffffff;
     box-shadow: var(--boxShadow);
     background: linear-gradient(to right, rgba(171, 109, 205, 1) 1%, rgba(131, 166, 248, 1) 100%);
@@ -53,7 +57,7 @@ body {
     padding: 40px 10px 10px 20px;
     margin-bottom: 30px;
     z-index: 2;
-    position: relative;
+    /* position: relative; */
 }
 
 .header__title {
@@ -74,7 +78,7 @@ body {
 
 .main {
     position: relative;
-    padding: 0px 20px 20px 20px;
+    padding: 120px 20px 20px 20px;
 }
 
 .match-list__button {
